@@ -1,3 +1,10 @@
+2013-10-06 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
+
+	* aprx.h, interface.c, parse_aprs.c:
+	    Always look inside 3rd party APRS frames too to determine
+	    their content for filtering uses. RF->RF relaying didn't
+	    do that.
+
 2013-10-05 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* configure.in, Makefile.in, aprx.c, aprx.8.in:
